--- a/src/app/components/agendar/cliente-selector/cliente-selector.component.html
+++ b/src/app/components/agendar/cliente-selector/cliente-selector.component.html
@@ -3,8 +3,10 @@
 <div *ngIf="mostrarModal" class="modal-backdrop">
   <div class="modal-card">
     <h3>Buscar Cliente</h3>
-    <input [formControl]="searchControl" placeholder="Nombre del cliente" />
-    <button class="btn" style="margin-left: 8px;" (click)="buscar()">Buscar</button>
+    <div class="input-group">
+      <input [formControl]="searchControl" placeholder="Nombre del cliente" />
+      <button class="btn" (click)="buscar()">Buscar</button>
+    </div>
 
     <ul *ngIf="resultados && resultados.length > 0">
       <li *ngFor="let c of resultados" class="cliente-item">
