--- a/src/app/components/vete/veterinario/veterinarian-dashboard.component.html
+++ b/src/app/components/vete/veterinario/veterinarian-dashboard.component.html
@@ -145,7 +145,7 @@
               />
             </div>
             <div class="space-y-3">
-              <div *ngFor="let patient of filteredPatients()" class="flex items-center justify-between p-3 border rounded-lg hover:bg-gray-50 cursor-pointer">
+              <div *ngFor="let patient of getFilteredPatients()" class="flex items-center justify-between p-3 border rounded-lg hover:bg-gray-50 cursor-pointer">
                 <div class="flex items-center space-x-3">
                   <div class="w-10 h-10 bg-blue-100 rounded-full flex items-center justify-center">
                      <svg class="h-4 w-4 text-red-500" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24"></svg>
