ya funciona visita-casos clinicos

--- a/src/app/pages/listapacientes/listapacientes-page.component.html
+++ b/src/app/pages/listapacientes/listapacientes-page.component.html
@@ -112,7 +112,7 @@
             <app-visitas-casos
               *ngIf="subvista === 'visitas'"
               [tiposVisita]="tiposVisita"
-              [mascotaId]="pacienteSeleccionado?.mascotaId || 0"
+              [mascotaId]="pacienteSeleccionado.mascotaId || 0"
               (seleccionarTipoVisita)="tipoVisitaSeleccionado = $event">
             </app-visitas-casos>
 
