--- a/src/app/components/listapacientes/visitas-casos/visitas-casos.component.html
+++ b/src/app/components/listapacientes/visitas-casos/visitas-casos.component.html
@@ -3,8 +3,8 @@
 </h3>
 
 <ng-container *ngIf="!cargandoVisitas; else cargandoVisitasTpl">
-  <div *ngIf="visitasMascota.length > 0; else sinVisitasTpl" class="cards-container">
-    <div *ngFor="let visita of visitasMascota" class="visita-card-ios">
+  <div *ngIf="visitasMascota.length > 0; else sinVisitasTpl" class="cards-container-vertical">
+    <div *ngFor="let visita of visitasPaginaActual" class="visita-card-ios">
       <div class="visita-card-header">
         <span class="icon-med"><span style="font-size:1.3em;">🩺</span></span>
         <span class="visita-id">ID: {{ visita.visitaId }}</span>
@@ -23,6 +23,14 @@
           <span class="caso-id">({{ visita.casoClinicoId }})</span>
         </div>
       </div>
+    </div>
+    <!-- Paginación -->
+    <div class="paginacion-visitas">
+      <button (click)="cambiarPagina(-1)" [disabled]="paginaActual === 1">Anterior</button>
+      <ng-container *ngFor="let pagina of [].constructor(totalPaginas); let i = index">
+        <button (click)="irAPagina(i+1)" [class.activa]="paginaActual === (i+1)">{{ i+1 }}</button>
+      </ng-container>
+      <button (click)="cambiarPagina(1)" [disabled]="paginaActual === totalPaginas">Siguiente</button>
     </div>
   </div>
   <ng-template #sinVisitasTpl>
